fixed the right side gap by setting the left padding to 0 on the .navbar class

--- a/assets/style.css
+++ b/assets/style.css
@@ -359,6 +359,9 @@ display: inline-flex;
             white-space: pre-line;
             padding-left: 0px;
         }
+        .navbar {
+            padding-right: 0px;
+        }
         .contact-padding {
 
         }
